--- a/public/css/_application.scss
+++ b/public/css/_application.scss
@@ -7,6 +7,7 @@
             .application {
                 &_pic {
                     box-shadow: 0 2px 10px rgba(0,0,0,0.25);
+                    transform: scale(1.05);
                 }
                 &_name {
                     background-color: $main-red;
